5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1807_2564.log
== TEST (2019-06-06 17:29:57) 
-- CODE:
vet=array(eval(input("Gols feitos: ")))
vet2=array(eval(input("Gols sofridos: ")))
vitoria=0
derrota=0
empate=0
i=0
for i in range(size(vet)):
	if(vet[i]>vet2[i]):
		vitoria=vitoria+1
	elif(vet[i]<vet2[i]):
		derrota=derrota+1
	elif(vet[i]==vet2[i]):
		empate=empate+1

vet3=zeros(3, dtype=int)

vet3[0]=vitoria
vet3[1]=empate
vet3[2]=derrota

print(vet3)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:30:17) 
-- CODE:
from numpy import *
vet=array(eval(input("Gols feitos: ")))
vet2=array(eval(input("Gols sofridos: ")))
vitoria=0
derrota=0
empate=0
i=0
for i in range(size(vet)):
	if(vet[i]>vet2[i]):
		vitoria=vitoria+1
	elif(vet[i]<vet2[i]):
		derrota=derrota+1
	elif(vet[i]==vet2[i]):
		empate=empate+1

vet3=zeros(3, dtype=int)

vet3[0]=vitoria
vet3[1]=empate
vet3[2]=derrota

print(vet3)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:30:32) 
-- CODE:
from numpy import *
vet=array(eval(input("Gols feitos: ")))
vet2=array(eval(input("Gols sofridos: ")))
vitoria=0
derrota=0
empate=0
i=0
for i in range(size(vet)):
	if(vet[i]>vet2[i]):
		vitoria=vitoria+1
	elif(vet[i]<vet2[i]):
		derrota=derrota+1
	elif(vet[i]==vet2[i]):
		empate=empate+1

vet3=zeros(3, dtype=int)

vet3[0]=vitoria
vet3[1]=empate
vet3[2]=derrota

print(vet3)
		


-- EXECUTION TIME:
1.15015
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
